lighten and shift up copy button to avoid scrollbar

--- a/site/assets/copybutton.scss
+++ b/site/assets/copybutton.scss
@@ -1,23 +1,25 @@
 .highlight {
-    position: relative;
+  position: relative;
 }
 .highlight pre {
-    padding-right: 75px;
+  padding-right: 75px;
 }
+
 .highlight-copy-btn {
-    position: absolute;
-    bottom: 7px;
-    right: 7px;
-    border: 0;
-    border-radius: 4px;
-    padding: 1px;
-    font-size: 0.7em;
-    line-height: 1.8;
-    color: #fff;
-    background-color: #777;
-    min-width: 55px;
-    text-align: center;
+  position: absolute;
+  bottom: 7px;
+  right: 7px;
+  border: 0;
+  border-radius: 4px;
+  padding: 1px;
+  margin-bottom: 12px;
+  font-size: 0.7em;
+  line-height: 1.8;
+  color: #fff;
+  background-color: #737373;
+  min-width: 55px;
+  text-align: center;
 }
 .highlight-copy-btn:hover {
-    background-color: #666;
+  background-color: #666;
 }
